# btern

./: .gitignore  .travis.yml  LICENSE  README.md  __init__.py  binary.py  btern.py  character.py  integer.py  processor.py  pyproject.toml  test.py  trit.py
.github/workflows/: python-package.yml
doc/hardware/: alu.drawio  arch.md  assembly.md  clu.drawio  computer.drawio  fundamental.md  gates.md  iszero.drawio  iszero12.drawio  iszero2.drawio  jumpctl.drawio  jumper.drawio  logic.md  xor.drawio
doc/hardware/programs/: mul.asm  mul.t12  screentest.asm  screentest.t12
doc/hwsim/: and.drawio  arch.md  assembly.md  cld.drawio  cpu.drawio  fundamental.md  gates.md  loader.drawio  logic.md  mux.drawio  register.drawio
hwsim/: README.md  arithmetic.py  assembler.py  component.py  computer.py  cpu.py  finder.py  logic.py  memory.py  simulator.py  translator.py  util.py
src/ternary/: binary.py  character.py  integer.py  processor.py  trit.py  util.py
src/ternary/hardware/: README.md  arithmetic.py  assembler.py  component.py  computer.py  cpu.py  emulator.py  emulator_gui.py  finder.py  logic.py  memory.py  simulator.py  translator.py  util.py
tests/: test_all.py  test_binary.py  test_core.py  test_hardware.py  test_hardware_arithmetic.py  test_hardware_assembler.py  test_hardware_computer.py  test_hardware_cpu.py  test_hardware_emulator.py  test_hardware_logic.py  test_hardware_memory.py  test_hardware_translator.py  test_hwsim.py  test_hwsim_arithmetic.py  test_hwsim_computer.py  test_hwsim_cpu.py  test_hwsim_logic.py  test_hwsim_memory.py  util.py
(+11 files in other folders)
