[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ternary"
version = "1.0"
requires-python = ">= 3.10"
authors = [
  {name = "Brendan Jurd", email = "direvus@gmail.com"},
]
readme = "README.md"
license = "BSD-2-Clause"
description = "Exploration of balanced ternary logic systems, including a hardware simulation of a ternary computer"
keywords = ["ternary", "logic", "hardware", "simulation"]
dependencies = [
  "pillow",
]

[dependency-groups]
test = ["pytest", "pytest-cov", "flake8"]
gui = ["customtkinter"]

[project.scripts]
assembler = "ternary.hardware.assembler:cli"
emulator = "ternary.hardware.emulator:cli"
emulator_gui = "ternary.hardware.emulator_gui:cli"
simulator = "ternary.hardware.simulator:cli"
translator = "ternary.hardware.translator:cli"

[project.urls]
Repository = "https://github.com/direvus/btern.git"
